footer gap fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,7 +50,7 @@ a {
   min-height: 100vh;
   overflow: hidden;
   padding: 82px 0 0;
-  margin: 0 auto;
+  margin: 0 auto -16px;
 
   @include respond-to-min($resp_step_2) {
     padding-top: 92px;
